--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ html {
   height: 100%;
 }
 
+main {
+  grid-area: rest;
+}
+
 /* --- COLORING --- */
 .navbar-dark {
   color: #c60000ff;
